[gd_scene load_steps=12 format=3 uid="uid://dwk57yip14rsb"]

[ext_resource type="Script" path="res://scenes/ending.gd" id="1_bsea2"]
[ext_resource type="Texture2D" uid="uid://btka2p7px8bsj" path="res://sprites/ending.png" id="1_mgjkj"]
[ext_resource type="FontFile" uid="uid://8gt7ikahrcd3" path="res://fonts/VeraMoBd.ttf" id="3_5msjn"]
[ext_resource type="FontFile" uid="uid://b77d0cwbooj80" path="res://fonts/VeraMono.ttf" id="4_0xopb"]
[ext_resource type="Texture2D" uid="uid://bun5m3jgm1m7m" path="res://sprites/credits.png" id="5_dghcx"]
[ext_resource type="Texture2D" uid="uid://dus41y47f02l7" path="res://sprites/thank_you.png" id="5_q2oe3"]
[ext_resource type="Texture2D" uid="uid://drb650aevsqn3" path="res://sprites/icons/clock.png" id="5_rjhxx"]
[ext_resource type="Texture2D" uid="uid://ds5hxwylttqp3" path="res://sprites/icons/bolt.png" id="6_qjex7"]
[ext_resource type="Texture2D" uid="uid://bvxnqm8ab0p8v" path="res://sprites/icons/skull.png" id="7_mshbx"]

[sub_resource type="Animation" id="Animation_m7320"]
resource_name = "ending"
length = 27.0
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(3, 4, 9, 10),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ThankYou:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(19, 20),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Whiteout:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 2, 24, 26),
"transitions": PackedFloat32Array(-2, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Credits:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(11, 12, 17, 18),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Whiteout:color")
tracks/5/interp = 0
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 24),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0, 0, 1)]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(24),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"fade_out_ambience"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i1sgm"]
_data = {
"ending": SubResource("Animation_m7320")
}

[node name="Ending" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bsea2")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_mgjkj")
expand_mode = 3
stretch_mode = 6

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 792.0
offset_top = 256.0
offset_right = 1024.0
offset_bottom = 472.0
color = Color(0, 0, 0, 0.501961)

[node name="Label_LevelNumbers" type="Label" parent="ColorRect"]
texture_filter = 1
layout_mode = 0
offset_left = 16.0
offset_top = 40.0
offset_right = 29.0
offset_bottom = 208.0
theme_override_constants/line_spacing = -4
theme_override_fonts/font = ExtResource("3_5msjn")
theme_override_font_sizes/font_size = 20
text = "1
2
3
4
5
6
7
8"

[node name="Label_LevelTimes" type="Label" parent="ColorRect"]
texture_filter = 1
layout_mode = 0
offset_left = 64.0
offset_top = 40.0
offset_right = 136.0
offset_bottom = 208.0
theme_override_constants/line_spacing = -4
theme_override_fonts/font = ExtResource("4_0xopb")
theme_override_font_sizes/font_size = 20
text = "01:52
01:52
01:52
01:52
01:52
01:52
01:52
01:52
"

[node name="Label_LevelShifts" type="Label" parent="ColorRect"]
texture_filter = 1
layout_mode = 0
offset_left = 144.0
offset_top = 40.0
offset_right = 176.0
offset_bottom = 208.0
theme_override_constants/line_spacing = -4
theme_override_fonts/font = ExtResource("4_0xopb")
theme_override_font_sizes/font_size = 20
text = "10
0
0
0
0
0
0
0"
horizontal_alignment = 2

[node name="Label_LevelDeaths" type="Label" parent="ColorRect"]
texture_filter = 1
layout_mode = 0
offset_left = 184.0
offset_top = 40.0
offset_right = 216.0
offset_bottom = 208.0
theme_override_constants/line_spacing = -4
theme_override_fonts/font = ExtResource("4_0xopb")
theme_override_font_sizes/font_size = 20
text = "0
0
0
0
0
0
0
0"
horizontal_alignment = 2

[node name="TextureRect_Clock" type="TextureRect" parent="ColorRect"]
layout_mode = 0
offset_left = 64.0
offset_top = 16.0
offset_right = 128.0
offset_bottom = 32.0
texture = ExtResource("5_rjhxx")
expand_mode = 3
stretch_mode = 5

[node name="TextureRect_Bolt" type="TextureRect" parent="ColorRect"]
layout_mode = 0
offset_left = 144.0
offset_top = 16.0
offset_right = 184.0
offset_bottom = 32.0
texture = ExtResource("6_qjex7")
expand_mode = 3
stretch_mode = 5

[node name="TextureRect_Skull" type="TextureRect" parent="ColorRect"]
layout_mode = 0
offset_left = 184.0
offset_top = 16.0
offset_right = 224.0
offset_bottom = 32.0
texture = ExtResource("7_mshbx")
expand_mode = 3
stretch_mode = 5

[node name="Credits" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 576.0
offset_top = 128.0
offset_right = 1216.0
offset_bottom = 640.0
texture = ExtResource("5_dghcx")
expand_mode = 3
stretch_mode = 5

[node name="ThankYou" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 496.0
offset_top = 652.0
offset_right = 1264.0
offset_bottom = 705.0
texture = ExtResource("5_q2oe3")
expand_mode = 5
stretch_mode = 4

[node name="Whiteout" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_i1sgm")
}

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
